--- a/views/mixins.pug
+++ b/views/mixins.pug
@@ -10,6 +10,16 @@
     'black'   : 'dark', 
   }
 
+
+mixin pdf(path)
+  #modal-pdf.modal.fade
+    .modal-dialog.modal-lg(role='document')
+      .modal-content
+        .modal-body
+          button.close(type='button' data-dismiss='modal' aria-label='Close')
+            span(aria-hidden='true') ×
+          object(type='application/pdf' data=path width='100%' height='500' style='height: 85vh;') No Support
+
 mixin fieldset(text)
   -text=text || '';
   fieldset&attributes(fset)
