--- a/views/index.pug
+++ b/views/index.pug
@@ -69,7 +69,7 @@ block content
         img.img-fluid.w-100(src='img/dis.cologo.png' alt='Logo')
         p.font-weight-light.logo VISUAL PAS
         
-    +pdf('/pho')
+    +pdf('/pho/excel/vmfg/ms_inv_part')
 
 block script
   script.
