--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -47,8 +47,9 @@ if session && session.menus
 
 script.
   function report(id){
-    $('#modal-pdf object').attr('data',id);
-    $('#modal-pdf').modal('show');
+    $('#modal-report object').attr('data',id);
+    $('#modal-repopt').modal('show');
+    //$('#modal-report').modal('show');
   }
       
 //-
