--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -32,9 +32,10 @@ mixin nav-drop-item(child)
     child.report = child.report || {};
     if(child.report.fname) child.report.fname = child.report.fname.replace(/\.prpt$/,'');
   
-  a.dropdown-item(href=child.href data-id=child.id)=child.text
-  if child.icon
-    i.fa(class=`fa-${child.icon}`)
+  a.dropdown-item(href=child.href||child.id data-id=child.id)
+    if child.icon
+      i.fa(class=`fa-${child.icon}`)
+    span=child.text
 
 if session && session.menus
   +nav(config.APP.title || 'BS-FW')
