--- a/views/mixins.pug
+++ b/views/mixins.pug
@@ -11,7 +11,7 @@
   }
 
 
-mixin report(path)
+mixin report()
   #modal-report.modal.fade
     .modal-dialog.modal-lg(role='document')
       .modal-content
@@ -19,7 +19,7 @@ mixin report(path)
           button.close(type='button' data-dismiss='modal' aria-label='Close')
             span(aria-hidden='true') ×
 
-mixin repopt(path)
+mixin repopt()
   #modal-repopt.modal.fade
     .modal-dialog.modal-sm(role='document')
       .modal-content
