--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,7 +118,7 @@ fieldset > legend {
   width: auto;
   max-width: 100%;
   padding: 0 10px;
-  color: cornflowerblue;
+  color: darkcyan;
 }
 
 .form-control.is-invalid, .was-validated .form-control:invalid,
