--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,12 @@ extends layout
 
 block style
   style.
-    p.logo {
+    .logo {
       font-size: 2.5rem;
       color: #777777;
       position: relative;
       top: -0.5em;
+      font-weight:300;
     }
     
     .card-panel {
@@ -54,7 +55,7 @@ block content
       .card-panel.p-sm-5.position-relative
         .text-center
           img.img-fluid.w-50(src='img/cologo.png' alt='Logo')
-          h1.h2.mt-5=`${title} Login`
+          .logo.h1.h2.mt-5=`${title} Login`
         form#loginForm.mt-5(autocomplete='on')
           p.small.mb-2.text-scarlet
          
@@ -74,9 +75,9 @@ block content
                 span.input-group-text(onclick='password_show_hide();')
                   i#show_eye.fas.fa-eye
                   i#hide_eye.fas.fa-eye-slash.d-none
-            br
             
             //-
+              br
               .form-group.form-check.text-center
                 input#remember_me.form-check-input(type='checkbox' name='remember')
                 label.form-check-label(for='remember_me') Remember me
@@ -90,7 +91,7 @@ block content
         img.img-fluid.w-100(src='img/cologo.png' alt='Logo')
         div
           br
-          p.font-weight-light.logo=title
+          p.logo=title
         
 block script
   script.
@@ -122,4 +123,3 @@ block script
         hide_eye.style.display = "none";
       }
     }
-        
